--- a/.github/workflows/awscli.yaml
+++ b/.github/workflows/awscli.yaml
@@ -16,6 +16,7 @@ jobs:
               uses: actions/checkout@v4
             - name: AWS Assume Role
               uses: aws-actions/configure-aws-credentials@v4
+            - name: AWS CLI   
               run: |
                 aws sts assume-role --role-arn arn:aws:iam::975049932312:role/githubactions3fullaccess --role-session-name "AssumeRoleSession" > assume-role-output.txt
                 aws s3 ls
