--- a/.github/workflows/awscli.yaml
+++ b/.github/workflows/awscli.yaml
@@ -24,3 +24,4 @@ jobs:
               run: |
                 aws sts get-caller-identity
                 aws s3 ls
+                aws s3 mb s3://manishmittalmay2024
